# scaffer

./: MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py  tasks.py
scaffer/: __main__.py  emitter.py  scaffer.py
test/: .gitignore  scaffer.json  test.py  test_scaffer.py
test/gen2/errorcases/: error_prone.txt
