[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools.packages.find]
include = ["scaffer*"]

[project]
name = "scaffer"
version = "3.0"
description = "scaffer"
readme = "README.md"

requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "argp",
    "gitignore-parser",
    "requests"
]

[project.scripts]
scaffer = "scaffer.scaffer:main"

[tool.ruff]
target-version = "py310"
select = ["ALL"]
ignore = [
    "COM812",  # Missing trailing comma
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D103",  # Missing docstring in public function
    "E501",  # Line too long
    "FBT001",  # Boolean-typed positional argument in function definition
    "ISC001",  # Single-line implicit string concatenation
]

[tool.pytest.ini_options]
filterwarnings = "ignore:.*:DeprecationWarning"
junit_family = "xunit1"
markers = [
    "integration: marks tests as integration test (deselect with '-m \"not integration\"')"
]
